google-map component 사용.

--- a/elements.html
+++ b/elements.html
@@ -1,2 +1,3 @@
 <link rel="import" href="./things-scene-gmap.html">
 <link rel="import" href="./things-gmap-overlay.html">
+<link rel="import" href="./things-gmap-scene-overlay.html">
