--- a/things-gmap-scene-overlay.html
+++ b/things-gmap-scene-overlay.html
@@ -202,7 +202,7 @@ Example:
             event.stopPropagation();
         };
 
-        ['mousemove', 'dragstart', 'drag', 'dragend', 'dblclick', 'tap']
+        ['mousemove', 'dragstart', 'drag', 'dragend', 'dblclick', 'click', 'tap']
         .forEach(function(event) {
           google.maps.event.addDomListener(self.$.scene, event, listener)
         })
