--- a/things-gmap-scene-overlay.html
+++ b/things-gmap-scene-overlay.html
@@ -51,6 +51,7 @@ Example:
         position: absolute;
         top: 0;
         left: 0;
+        cursor: default;
         /*pointerEvents: none;*/
       }
     </style>
