--- a/things-gmap-scene-overlay.html
+++ b/things-gmap-scene-overlay.html
@@ -326,7 +326,7 @@ Example:
         // If this.overlay is scaled (with resolutionScale), we need to scale by
         // the same amount to account for the larger canvas.
         var scale = Math.pow(2, this.map.zoom) * this.resolutionScale;
-        this.scene.scale(scale, scale);
+        this.scene.scale(scale / 10, scale / 10);
         /* If the map was not translated, the topLeft corner would be 0,0 in
          * world coordinates. Our translation is just the vector from the
          * world coordinate of the topLeft corder to 0,0.
