--- a/things-gmap-scene-overlay.html
+++ b/things-gmap-scene-overlay.html
@@ -108,8 +108,19 @@ Example:
       properties: {
         overlay: Object,
         context: Object,
-        scene: Object,
+        scene: {
+          type: Object,
+          notify: true
+        },
         model: Object,
+        variables: {
+          type: Object,
+          notify: true
+        },
+        selected: {
+          type: Object,
+          notify: true
+        },
         map: Object,
         mode: {
           type: Number,
@@ -124,6 +135,7 @@ Example:
         },
         zoom: {
           type: Number,
+          notify: true,
           value: 2
         },
         resolutionScale: {
@@ -327,6 +339,7 @@ Example:
         // the same amount to account for the larger canvas.
         var scale = Math.pow(2, this.map.zoom) * this.resolutionScale;
         this.scene.scale(scale / 10, scale / 10);
+        // this.scene.scale(scale, scale);
         /* If the map was not translated, the topLeft corner would be 0,0 in
          * world coordinates. Our translation is just the vector from the
          * world coordinate of the topLeft corder to 0,0.
