--- a/things-gmap-scene-overlay.html
+++ b/things-gmap-scene-overlay.html
@@ -70,7 +70,9 @@ Example:
     <things-scene-viewer id="scene"
                          mode="{{mode}}"
                          scene="{{scene}}"
-                         model="[[model]]">
+                         model="[[model]]"
+                         selected="{{selected}}"
+                         variables="{{variables}}">
       <content select="things-scene-layer"></content>
       <content select="things-scene-handler"></content>
     </things-scene-viewer>
