--- a/demo/index.html
+++ b/demo/index.html
@@ -13,35 +13,102 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <title>things-scene-gmap Demo</title>
+
     <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
+
     <link rel="import" href="../things-scene-gmap.html">
   </head>
   <body unresolved>
 
-    <p>An example of <code>&lt;things-scene-gmap&gt;</code>:</p>
+    <template is="dom-bind" id="app">
+      <style is="custom-style">
+      :root{
+        --things-scene-gmap: {
+          height: 500px;
+        }
+        --things-scene-gmap-map: {
+          width: 100%;
+          height: 100%;
+        }
+      }
+      </style>
 
-    <p>Make words! <button id="saybtn">Say Something</button></p>
-    <p>Make lasers! <button id="laserbtn">Fire lasers</button></p>
+      <p>An example of <code>&lt;things-scene-gmap&gt;</code>:</p>
 
-    <things-scene-gmap author='{"name": "Lord Meowser", "image": "http://lorempixel.com/g/300/200/cats/"}' fancy>
-      <h2>Hello things-scene-gmap</h2>
-    </things-scene-gmap>
+      <things-scene-gmap model="[[model]]">
+        <things-scene-layer type="selection-layer"></things-scene-layer>
+        <things-scene-layer type="modeling-layer"></things-scene-layer>
+
+        <things-scene-handler type="text-editor"></things-scene-handler>
+        <things-scene-handler type="move-handler"></things-scene-handler>
+        <things-scene-handler type="gmap-shift"></things-scene-handler>
+      </things-scene-gmap>
+
+    </template>
 
     <script>
-      var seedElement = document.querySelector('things-scene-gmap');
+      window.addEventListener('WebComponentsReady', function(e) {
+        var app = document.querySelector('#app')
 
-      document.querySelector('#saybtn').addEventListener('click', function() {
-        alert(seedElement.sayHello('Hallo!'));
+        var model = {
+          components: [{
+            type: 'text',
+            top: 65,
+            left: 200,
+            width: 10,
+            height: 10,
+            textAlign: 'left',
+            fontSize: 1,
+            fontFamily: 'serif',
+            text: '이 예제에서는 맵뷰어를 설명합니다'
+          }, {
+            type: 'rect',
+            id: 'first',
+            name: '첫번째 사각형',
+            left: 150,
+            top: 50,
+            rotation: 10,
+            width: 20,
+            height: 20,
+            lineWidth: 0.1,
+            strokeStyle: '#000000',
+            fillStyle: '#FF0000',
+            alpha: 0.5
+          }, {
+            type: 'ellipse',
+            name: 'select layer 테스트용 원',
+            cx: 200,
+            cy: 70,
+            rotation: 0,
+            rx: 16,
+            ry: 16,
+            lineWidth: 0.1,
+            strokeStyle: '#000000',
+            fillStyle: '#00FF00',
+            alpha: 0.3
+          }, {
+            type: 'polygon',
+            path: [{x:178, y:120}, {x:185, y:129}, {x:192, y:131}, {x:187, y:120}, {x:182, y:119}, {x:180, y:117}],
+            rotation: 0,
+            strokeStyle: '#000000',
+            fillStyle: '#FF00FF',
+            lineWidth: 0.1,
+            alpha: 0.5
+          }, {
+            type: 'line',
+            name: 'select layer 테스트용 라인',
+            x1: 260,
+            y1: 30,
+            x2: 270,
+            y2: 45,
+            strokeStyle: '#000000',
+            lineWidth: 0.5
+          }]
+        };
+
+        app.model = model
+
       });
-
-      document.querySelector('#laserbtn').addEventListener('click', function() {
-        seedElement.fireLasers();
-      });
-
-      document.addEventListener("things-scene-gmap-lasers", function(e) {
-        console.log(e.detail.sound);
-      });
-
     </script>
 
   </body>
