change default showCenterControl

--- a/things-scene-gmap.html
+++ b/things-scene-gmap.html
@@ -230,13 +230,9 @@ Example:
           type: String,
           value: 'roadmap'
         },
-        // disableDefaultUi: {
-        //   type: Boolean,
-        //   value: true
-        // },
         showCenterControl: {
           type: Boolean,
-          value: true
+          value: false
         }
       },
 
