--- a/things-scene-gmap.html
+++ b/things-scene-gmap.html
@@ -132,7 +132,7 @@ Example:
       <p>이 마커를 드래그해서 중심 위치를 옮길 수 있습니다</p>
     </google-map-marker>
 
-    <div id="center-control" class="controls">
+    <div id="center-control" class="controls" hidden>
       <paper-button id="move-to-current-position" icon></paper-button>
       <paper-button id="move-center-to-marker" icon></paper-button>
       <paper-button id="move-marker-to-center" icon></paper-button>
@@ -142,7 +142,8 @@ Example:
     <input id="place-input"
            class="controls"
            type="text"
-           placeholder="Enter a location">
+           placeholder="Enter a location"
+           hidden>
 
     <things-scene-viewer id="scene"
                          mode="{{mode}}"
@@ -322,8 +323,10 @@ Example:
       },
 
       _onMapChanged: function(map) {
-        if(this.showCenterControl)
+        if(this.showCenterControl) {
+          this._hideCenterControl()
           this._showCenterControl()
+        }
       },
 
       _showCenterControl: function() {
@@ -364,6 +367,10 @@ Example:
         this.map.controls[api.ControlPosition.TOP_LEFT].push(this.$['center-control']);
 
         this.$['location-marker'].map = this.map
+
+        Array.from(this.querySelectorAll('.controls')).forEach(function(control) {
+          control.hidden = false
+        })
       },
 
       _hideCenterControl: function() {
@@ -383,6 +390,10 @@ Example:
         this.map.controls[api.ControlPosition.TOP_LEFT].removeAt(index)
 
         this.$['location-marker'].map = null
+
+        Array.from(this.querySelectorAll('.controls')).forEach(function(control) {
+          control.hidden = true
+        })
       },
 
       _onApiLoad: function(e) {
