--- a/demo/index.html
+++ b/demo/index.html
@@ -35,7 +35,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       <p>An example of <code>&lt;things-scene-gmap&gt;</code>:</p>
 
-      <things-scene-gmap model="[[model]]">
+      <things-scene-gmap model="[[model]]"
+                         show-center-control=true>
         <things-scene-layer type="selection-layer"></things-scene-layer>
         <things-scene-layer type="modeling-layer"></things-scene-layer>
 
