--- a/demo/index.html
+++ b/demo/index.html
@@ -52,6 +52,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         var app = document.querySelector('#app')
 
         var model = {
+          zoom: 17,
           components: [{
             type: 'text',
             top: 65,
