--- a/things-scene-gmap.html
+++ b/things-scene-gmap.html
@@ -568,7 +568,8 @@ Example:
         // If this.overlay is scaled (with resolutionScale), we need to scale by
         // the same amount to account for the larger canvas.
         var scale = Math.pow(2, this.map.zoom) * this.resolutionScale;
-        this.scene.scale(scale / 10, scale / 10);
+        var ratio = this.model.zoom || 1
+        this.scene.scale(scale / ratio, scale / ratio);
         // this.scene.scale(scale, scale);
         /* If the map was not translated, the topLeft corner would be 0,0 in
          * world coordinates. Our translation is just the vector from the
