--- a/things-scene-gmap.html
+++ b/things-scene-gmap.html
@@ -257,6 +257,7 @@ Example:
           center: Object.assign({}, this.center),
           zoom: this.zoom
         })
+        this._update();
       },
 
       _queryAddress: function() {
