--- a/things-scene-gmap.html
+++ b/things-scene-gmap.html
@@ -545,6 +545,7 @@ Example:
         // overlayView's projection, not the map's. Have to use the center of the
         // map for this, not the top left, for the same reason as above.
         // https://developers.google.com/maps/documentation/javascript/reference?hl=ko#MapCanvasProjection
+
         var projection = this.overlay.getProjection();
 
         var divCenter = projection.fromLatLngToDivPixel(center);
@@ -583,6 +584,7 @@ Example:
         var mapProjection = this.map.getProjection();
 
         var offset = mapProjection.fromLatLngToPoint(this._topLeft);
+
         // this.scene.translate(-offset.x * t_scale, -offset.y * t_scale)
         this.scene.translate(-offset.x * scale, -offset.y * scale)
       },
@@ -593,8 +595,17 @@ Example:
         this._createOverlay()
       },
 
-      _onSceneChanged: function(model) {
+      _onSceneChanged: function(scene) {
         this._createOverlay()
+
+        var center = this.scene.root().get('center') || {
+          lat: 0,
+          lng: 0
+        }
+        var zoom = this.scene.root().get('zoom') || 2
+
+        this.map.setCenter(center)
+        this.map.setZoom(zoom)
       },
 
       _createOverlay: function() {
