--- a/things-scene-gmap.html
+++ b/things-scene-gmap.html
@@ -191,7 +191,10 @@ Example:
           notify: true
         },
         model: Object,
-        values: Object,
+        values: {
+          type: Object,
+          notify: true
+        },
         variables: {
           type: Object,
           notify: true
