--- a/things-scene-gmap.html
+++ b/things-scene-gmap.html
@@ -191,10 +191,7 @@ Example:
           notify: true
         },
         model: Object,
-        values: {
-          type: Object,
-          notify: true
-        },
+        values: Object,
         variables: {
           type: Object,
           notify: true
